--- a/career-accelerator.html
+++ b/career-accelerator.html
@@ -20,7 +20,7 @@
 
   <section class="hero">
     <span class="badge">RLN: Resume · LinkedIn · Networking</span>
-    <h1>Career Accelerator for Leaders</h1>
+    <h1>Career Accelerator for Professionals</h1>
     <p class="lead">A practical 4-week cohort designed for professionals in transition or ready for a new chapter. Each week focuses on one part of RLN — with AI-powered tools to help you move faster and stand out.</p>
     <div class="cta-group">
       <a class="cta" href="YOUR_GOOGLE_FORM_URL" target="_blank">Apply Now</a>
