--- a/career-accelerator.html
+++ b/career-accelerator.html
@@ -23,7 +23,7 @@
     <h1>Career Accelerator for Professionals</h1>
     <p class="lead">A practical 4-week cohort designed for professionals in transition or ready for a new chapter. Each week focuses on one part of RLN — with AI-powered tools to help you move faster and stand out.</p>
     <div class="cta-group">
-      <a class="cta" href="YOUR_GOOGLE_FORM_URL" target="_blank">Apply Now</a>
+      <a class="cta" href="https://docs.google.com/forms/d/e/1FAIpQLSd634sjCPvEfsZHdejzFdJgvEjKeWQqqxuaNsST7AVnfTqmyA/viewform?usp=dialog" target="_blank">Apply Now</a>
     </div>
   </section>
 
@@ -94,12 +94,12 @@
     <h2>Ready to Accelerate?</h2>
     <p class="lead">Whether you’re between jobs, re‑entering the workforce, or ready for a new direction, this program helps you move forward with confidence and clarity.</p>
     <div class="cta-group">
-      <a class="cta" href="YOUR_GOOGLE_FORM_URL" target="_blank">Apply Now</a>
+      <a class="cta" href="https://docs.google.com/forms/d/e/1FAIpQLSd634sjCPvEfsZHdejzFdJgvEjKeWQqqxuaNsST7AVnfTqmyA/viewform?usp=dialog" target="_blank">Apply Now</a>
     </div>
   </section>
 
   <footer>
-    <p>© <span id="year"></span> Better Ways of Working · <a href="https://bwow.substack.com" target="_blank">Substack</a> · <a href="https://www.linkedin.com" target="_blank">LinkedIn</a> · <a href="https://www.youtube.com" target="_blank">YouTube</a></p>
+    <p>© <span id="year"></span> Better Ways of Working · <a href="https://bwow.substack.com" target="_blank">Substack</a> · <a href="https://www.linkedin.com/company/better-ways-of-working-now" target="_blank">LinkedIn</a> · <a href="https://www.youtube.com/@betterwaysofworking" target="_blank">YouTube</a></p>
   </footer>
 
   <script>document.getElementById('year').textContent=new Date().getFullYear()</script>
