--- a/career-accelerator.html
+++ b/career-accelerator.html
@@ -12,7 +12,7 @@
       <img src="logo-bwow.png" alt="Better Ways of Working logo" />
     </a>
     <nav>
-      <a href="/">Home</a>
+      <a href="index.html">Home</a>
       <a href="career-accelerator.html" class="active">Programs</a>
       <a href="https://bwow.substack.com" target="_blank">Newsletter</a>
     </nav>
