--- a/events.html
+++ b/events.html
@@ -54,7 +54,7 @@
         <!-- Google Calendar Embed -->
         <iframe 
           class="events-iframe"
-          src="https://calendar.google.com/calendar/embed?src=a4e503a68b06895c06294388e2a3ecfec842c4e40a05c3477540c12369f5b264%40group.calendar.google.com&ctz=America%2FNew_York"
+          src="https://calendar.google.com/calendar/embed?src=a4e503a68b06895c06294388e2a3ecfec842c4e40a05c3477540c12369f5b264%40group.calendar.google.com&ctz=America%2FNew_York&mode=AGENDA"
           frameborder="0"
           scrolling="no"
         ></iframe>
