--- a/events.html
+++ b/events.html
@@ -18,6 +18,14 @@
       width: 100%;
       height: 700px;
       border: 0;
+      /* Dark-mode style: visually invert and adjust colors */
+      filter: invert(0.9) hue-rotate(180deg) brightness(0.9);
+    }
+
+    @media (max-width: 768px) {
+      .events-iframe {
+        height: 600px;
+      }
     }
   </style>
 </head>
@@ -51,7 +59,7 @@
       </p>
 
       <div class="events-embed">
-        <!-- Google Calendar Embed -->
+        <!-- Google Calendar Embed in Agenda (schedule) view with dark-mode filter -->
         <iframe 
           class="events-iframe"
           src="https://calendar.google.com/calendar/embed?src=a4e503a68b06895c06294388e2a3ecfec842c4e40a05c3477540c12369f5b264%40group.calendar.google.com&ctz=America%2FNew_York&mode=AGENDA"
