--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
-  <header>
-    <a class="logo" href="/">
-      <img src="logo-bwow.png" alt="Better Ways of Working logo" />
-    </a>
-    <nav>
-      <a href="/">Home</a>
-      <a href="career-accelerator.html">Career Accelerator</a>
-      <a href="https://bwow.substack.com" target="_blank">Newsletter</a>
-    </nav>
-  </header>
+<header>
+  <a class="logo" href="index.html">
+    <img src="logo-bwow.png" alt="Better Ways of Working logo" />
+  </a>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="career-accelerator.html">Career Accelerator</a>
+    <a href="events.html">Events</a>
+    <a href="https://bwow.substack.com" target="_blank">Newsletter</a>
+  </nav>
+</header>
 
   <section class="hero">
     <h1>There’s a Better Way to Work — and Grow Your Career</h1>
