--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   </a>
   <nav>
     <a href="index.html">Home</a>
-    <a href="career-accelerator.html">Career Accelerator</a>
+    <a href="career-accelerator.html">The Better Career Cohort</a>
+    <a href="registered-scrum-master.html">Registered Scrum Master</a>
     <a href="events.html">Events</a>
     <a href="https://bwow.substack.com" target="_blank">Newsletter</a>
   </nav>
@@ -38,6 +39,33 @@
   </section>
 
   <section>
+    <h2>Current Programs</h2>
+    <div class="grid grid-2">
+      <article class="card">
+        <h3>The Better Career Cohort</h3>
+        <p class="small muted">
+          A 4-week, guided cohort to help you clarify your story, upgrade your resume and LinkedIn, and build a system for consistent, purposeful career growth.
+        </p>
+        <p class="small">
+          Ideal for professionals in transition, re-entering the workforce, or ready to move into a more aligned role.
+        </p>
+        <a class="cta" href="career-accelerator.html">Learn about The Better Career Cohort</a>
+      </article>
+      <article class="card">
+        <h3>Registered Scrum Master — 2-Day Course</h3>
+        <p class="small muted">
+          A practical, hands-on Scrum course where you learn by doing — designed for people who want to lead teams using modern Agile practices, not just pass an exam.
+        </p>
+        <p class="small">
+          Great for emerging leaders, new Scrum Masters, and experienced professionals who want a refresh grounded in real-world coaching.
+        </p>
+        <a class="cta" href="registered-scrum-master.html">View the 2-Day Course</a>
+      </article>
+    </div>
+  </section>
+
+
+  <section>
     <h2>Your Plan for Progress</h2>
     <ol>
       <li><strong>Learn practical strategies</strong> — gain the tools to align, communicate, and deliver results with confidence.</li>
@@ -45,7 +73,7 @@
       <li><strong>Build a reputation for clarity, momentum, and impact</strong> — whether in your current role or your next one.</li>
     </ol>
     <div class="cta-group">
-      <a class="cta" href="career-accelerator.html">Explore the Career Accelerator</a>
+      <a class="cta" href="career-accelerator.html">Explore The Better Career Cohort</a>
       <a class="cta-secondary" href="https://bwow.substack.com" target="_blank">Join the Newsletter</a>
     </div>
   </section>
