--- a/events.html
+++ b/events.html
@@ -36,7 +36,8 @@
     </a>
     <nav>
       <a href="index.html">Home</a>
-      <a href="career-accelerator.html">Career Accelerator</a>
+      <a href="career-accelerator.html">The Better Career Cohort</a>
+      <a href="registered-scrum-master.html">Registered Scrum Master</a>
       <a href="events.html" class="active">Events</a>
       <a href="https://bwow.substack.com" target="_blank">Newsletter</a>
     </nav>
