--- a/registered-scrum-master.html
+++ b/registered-scrum-master.html
@@ -27,7 +27,7 @@
       A practical, hands-on Scrum course where you learn by doing — designed for people who want to lead teams using modern Agile practices, not just pass an exam.
     </p>
     <div class="cta-group">
-      <a class="cta" href="YOUR_TICKET_TAILOR_URL_HERE" target="_blank" rel="noopener">
+      <a class="cta" href="https://buytickets.at/betterwaysofworking/1950017" target="_blank" rel="noopener">
         View Dates & Register
       </a>
       <a class="cta-secondary" href="https://bwow.substack.com" target="_blank" rel="noopener">
