--- a/index.html
+++ b/index.html
@@ -11,13 +11,34 @@
   <a class="logo" href="index.html">
     <img src="logo-bwow.png" alt="Better Ways of Working logo" />
   </a>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="career-accelerator.html">The Better Career Cohort</a>
-    <a href="registered-scrum-master.html">Registered Scrum Master</a>
-    <a href="events.html">Events</a>
-    <a href="https://bwow.substack.com" target="_blank">Newsletter</a>
-  </nav>
+<nav class="main-nav">
+  <a href="index.html" class="nav-logo">Home</a>
+
+  <div class="nav-dropdown">
+    <button class="nav-link">Programs ▾</button>
+    <div class="dropdown-menu">
+      <a href="career-accelerator.html">The Better Career Cohort</a>
+      <a href="registered-scrum-master.html">Registered Scrum Master</a>
+      <!-- Future programs -->
+      <!-- <a href="better-teams.html">Better Teams</a> -->
+      <!-- <a href="leadership-cohort.html">Leadership Cohort</a> -->
+      <a href="programs.html" class="view-all">View all programs →</a>
+    </div>
+  </div>
+
+  <a href="events.html" class="nav-link">Events</a>
+
+  <div class="nav-dropdown">
+    <button class="nav-link">Resources ▾</button>
+    <div class="dropdown-menu">
+      <a href="https://bwow.substack.com" target="_blank">Newsletter</a>
+      <a href="resources.html#youtube">YouTube</a>
+      <a href="resources.html#podcast">Podcast</a>
+      <a href="resources.html#guides">Guides & Downloads</a>
+      <a href="resources.html" class="view-all">All resources →</a>
+    </div>
+  </div>
+</nav>
 </header>
 
   <section class="hero">
