--- a/events.html
+++ b/events.html
@@ -34,13 +34,31 @@
     <a class="logo" href="index.html">
       <img src="logo-bwow.png" alt="Better Ways of Working logo" />
     </a>
-    <nav>
-      <a href="index.html">Home</a>
+<nav class="main-nav">
+  <a href="index.html" class="nav-logo">Home</a>
+
+  <div class="nav-dropdown">
+    <button class="nav-link">Programs ▾</button>
+    <div class="dropdown-menu">
       <a href="career-accelerator.html">The Better Career Cohort</a>
       <a href="registered-scrum-master.html">Registered Scrum Master</a>
-      <a href="events.html" class="active">Events</a>
+      <a href="programs.html" class="view-all">View all programs →</a>
+    </div>
+  </div>
+
+  <a href="events.html" class="nav-link">Events</a>
+
+  <div class="nav-dropdown">
+    <button class="nav-link">Resources ▾</button>
+    <div class="dropdown-menu">
       <a href="https://bwow.substack.com" target="_blank">Newsletter</a>
-    </nav>
+      <a href="resources.html#youtube">YouTube</a>
+      <a href="resources.html#podcast">Podcast</a>
+      <a href="resources.html#guides">Guides & Downloads</a>
+      <a href="resources.html" class="view-all">All resources →</a>
+    </div>
+  </div>
+</nav>
   </header>
 
   <section class="hero">
