--- a/programs.html
+++ b/programs.html
@@ -10,7 +10,10 @@
 
 <!-- NAV START -->
 <nav class="main-nav">
-  <a href="index.html" class="nav-logo">Home</a>
+  <!-- Logo -->
+  <a href="index.html" class="nav-logo">
+    <img src="logo.png" alt="Better Ways of Working logo">
+  </a>
 
   <div class="nav-dropdown">
     <button class="nav-link">Programs ▾</button>
