--- a/programs.html
+++ b/programs.html
@@ -12,7 +12,7 @@
 <nav class="main-nav">
   <!-- Logo -->
   <a href="index.html" class="nav-logo">
-    <img src="logo.png" alt="Better Ways of Working logo">
+    <img src="logo-bwow.png" alt="Better Ways of Working logo">
   </a>
 
   <div class="nav-dropdown">
