--- a/resources.html
+++ b/resources.html
@@ -4,37 +4,40 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Resources | Better Ways of Working</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
 
-<!-- NAV START -->
-<nav class="main-nav">
-  <a href="index.html" class="nav-logo">Home</a>
+<header>
+  <a class="logo" href="index.html">
+    <img src="logo-bwow.png" alt="Better Ways of Working logo" />
+  </a>
+  <nav class="main-nav">
+    <a href="index.html" class="nav-logo">Home</a>
 
-  <div class="nav-dropdown">
-    <button class="nav-link">Programs ▾</button>
-    <div class="dropdown-menu">
-      <a href="career-accelerator.html">The Better Career Cohort</a>
-      <a href="registered-scrum-master.html">Registered Scrum Master</a>
-      <a href="programs.html" class="view-all">View all programs →</a>
+    <div class="nav-dropdown">
+      <button class="nav-link">Programs ▾</button>
+      <div class="dropdown-menu">
+        <a href="career-accelerator.html">The Better Career Cohort</a>
+        <a href="registered-scrum-master.html">Registered Scrum Master</a>
+        <a href="programs.html" class="view-all">View all programs →</a>
+      </div>
     </div>
-  </div>
 
-  <a href="events.html" class="nav-link">Events</a>
+    <a href="events.html" class="nav-link">Events</a>
 
-  <div class="nav-dropdown">
-    <button class="nav-link">Resources ▾</button>
-    <div class="dropdown-menu">
-      <a href="https://bwow.substack.com" target="_blank">Newsletter</a>
-      <a href="#youtube">YouTube</a>
-      <a href="#podcast">Podcast</a>
-      <a href="#guides">Guides & Downloads</a>
-      <a href="resources.html" class="view-all">All resources →</a>
+    <div class="nav-dropdown">
+      <button class="nav-link">Resources ▾</button>
+      <div class="dropdown-menu">
+        <a href="https://bwow.substack.com" target="_blank">Newsletter</a>
+        <a href="#youtube">YouTube</a>
+        <a href="#podcast">Podcast</a>
+        <a href="#guides">Guides & Downloads</a>
+        <a href="resources.html" class="view-all">All resources →</a>
+      </div>
     </div>
-  </div>
-</nav>
-<!-- NAV END -->
+  </nav>
+</header>
 
 <main class="page">
 
@@ -52,7 +55,7 @@
   <section id="youtube">
     <h2>YouTube</h2>
     <p>Short videos, interviews, and insights about better ways of working.</p>
-    <p><a href="YOUR_YOUTUBE_URL" target="_blank">Visit YouTube →</a></p>
+    <p><a href="https://www.youtube.com/@betterwaysofworking" target="_blank">Visit YouTube →</a></p>
   </section>
 
   <section id="podcast">
