--- a/programs.html
+++ b/programs.html
@@ -4,40 +4,40 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Programs | Better Ways of Working</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
 
-<!-- NAV START -->
-<nav class="main-nav">
-  <!-- Logo -->
-  <a href="index.html" class="nav-logo">
-    <img src="logo-bwow.png" alt="Better Ways of Working logo">
+<header>
+  <a class="logo" href="index.html">
+    <img src="logo-bwow.png" alt="Better Ways of Working logo" />
   </a>
+  <nav class="main-nav">
+    <a href="index.html" class="nav-logo">Home</a>
 
-  <div class="nav-dropdown">
-    <button class="nav-link">Programs ▾</button>
-    <div class="dropdown-menu">
-      <a href="career-accelerator.html">The Better Career Cohort</a>
-      <a href="registered-scrum-master.html">Registered Scrum Master</a>
-      <a href="programs.html" class="view-all">View all programs →</a>
+    <div class="nav-dropdown">
+      <button class="nav-link">Programs ▾</button>
+      <div class="dropdown-menu">
+        <a href="career-accelerator.html">The Better Career Cohort</a>
+        <a href="registered-scrum-master.html">Registered Scrum Master</a>
+        <a href="programs.html" class="view-all">View all programs →</a>
+      </div>
     </div>
-  </div>
 
-  <a href="events.html" class="nav-link">Events</a>
+    <a href="events.html" class="nav-link">Events</a>
 
-  <div class="nav-dropdown">
-    <button class="nav-link">Resources ▾</button>
-    <div class="dropdown-menu">
-      <a href="https://bwow.substack.com" target="_blank">Newsletter</a>
-      <a href="resources.html#youtube">YouTube</a>
-      <a href="resources.html#podcast">Podcast</a>
-      <a href="resources.html#guides">Guides & Downloads</a>
-      <a href="resources.html" class="view-all">All resources →</a>
+    <div class="nav-dropdown">
+      <button class="nav-link">Resources ▾</button>
+      <div class="dropdown-menu">
+        <a href="https://bwow.substack.com" target="_blank">Newsletter</a>
+        <a href="resources.html#youtube">YouTube</a>
+        <a href="resources.html#podcast">Podcast</a>
+        <a href="resources.html#guides">Guides & Downloads</a>
+        <a href="resources.html" class="view-all">All resources →</a>
+      </div>
     </div>
-  </div>
-</nav>
-<!-- NAV END -->
+  </nav>
+</header>
 
 <main class="page">
 
@@ -48,13 +48,19 @@
 
   <section>
     <h2>The Better Career Cohort</h2>
-    <p>A 4-week cohort that helps professionals reinvent their resume, LinkedIn, and networking strategy to land better roles.</p>
+    <p>
+      A 4-week cohort that helps professionals reinvent their resume, LinkedIn,
+      and networking strategy to land better roles.
+    </p>
     <p><a href="career-accelerator.html">Learn more →</a></p>
   </section>
 
   <section>
     <h2>Registered Scrum Master (Scrum Inc.)</h2>
-    <p>A 2-day certified class taught using Scrum Inc. material — with a focus on practical, real-world implementation.</p>
+    <p>
+      A 2-day certified class taught using Scrum Inc. material — with a focus on
+      practical, real-world implementation.
+    </p>
     <p><a href="registered-scrum-master.html">Learn more →</a></p>
   </section>
 
