--- a/career-accelerator.html
+++ b/career-accelerator.html
@@ -62,10 +62,10 @@
     <div>
       <h2>Format & Pricing</h2>
       <ul>
-        <li><strong>4-Week Cohort:</strong> $299 — weekly 75‑min sessions + templates</li>
-        <li><strong>Transition Rate:</strong> $145 — for between‑roles professionals</li>
+        <li><strong>4-Week Cohort:</strong> $299 — weekly 75-min sessions + templates</li>
+        <li><strong>Transition Rate:</strong> $145 — for between-roles professionals</li>
       </ul>
-      <p class="muted small">Scholarships available for under‑represented changemakers.</p>
+      <p class="muted small">Scholarships available.</p>
       <div class="card">
         <h3>Outcomes</h3>
         <ul>
@@ -83,7 +83,7 @@
     <div class="grid grid-3">
       <div class="card">
         <h3>Week 1 — Resume</h3>
-        <p>Tell your story with clarity and measurable results — plus AI‑powered resume insights and optimization.</p>
+        <p>Tell your story with clarity and measurable results — plus AI-powered resume insights and optimization.</p>
       </div>
       <div class="card">
         <h3>Week 2 — LinkedIn</h3>
@@ -112,14 +112,18 @@
 
   <section class="center">
     <h2>Ready to Accelerate?</h2>
-    <p class="lead">Whether you’re between jobs, re‑entering the workforce, or ready for a new direction, this program helps you move forward with confidence and clarity.</p>
+    <p class="lead">Whether you’re between jobs, re-entering the workforce, or ready for a new direction, this program helps you move forward with confidence and clarity.</p>
     <div class="cta-group">
       <a class="cta" href="https://docs.google.com/forms/d/e/1FAIpQLSd634sjCPvEfsZHdejzFdJgvEjKeWQqqxuaNsST7AVnfTqmyA/viewform?usp=dialog" target="_blank">Apply Now</a>
     </div>
   </section>
 
   <footer>
-    <p>© <span id="year"></span> Better Ways of Working · <a href="https://bwow.substack.com" target="_blank">Substack</a> · <a href="https://www.linkedin.com/company/better-ways-of-working-now" target="_blank">LinkedIn</a> · <a href="https://www.youtube.com/@betterwaysofworking" target="_blank">YouTube</a></p>
+    <p>© <span id="year"></span> Better Ways of Working · 
+      <a href="https://bwow.substack.com" target="_blank">Substack</a> · 
+      <a href="https://www.linkedin.com/company/better-ways-of-working-now" target="_blank">LinkedIn</a> · 
+      <a href="https://www.youtube.com/@betterwaysofworking" target="_blank">YouTube</a> · 
+    </p>
   </footer>
 
   <script>document.getElementById('year').textContent=new Date().getFullYear()</script>
