--- a/career-accelerator.html
+++ b/career-accelerator.html
@@ -118,6 +118,37 @@
     </div>
   </section>
 
+    <!-- FAQ (optional, tweak as needed) -->
+    <section class="section">
+      <h2>Common Questions</h2>
+
+      <h3>Who is this cohort for?</h3>
+      <p>
+        Mid-career professionals, emerging leaders, and people in transition who want
+        a more intentional, strategic approach to their next role—not just firing off
+        more applications.
+      </p>
+
+      <h3>Can I join if I’m already employed?</h3>
+      <p>
+        Yes. Many participants are currently employed but exploring what’s next, getting
+        ready for internal moves, or wanting to be more intentional about their career.
+      </p>
+
+      <h3>What if I can’t attend one of the live sessions?</h3>
+      <p>
+        Sessions are recorded, and you can watch the replay. To qualify for the
+        money-back guarantee, you’ll need to attend or watch all sessions and complete
+        the assignments.
+      </p>
+
+      <h3>How do refunds work?</h3>
+      <p>
+        If you meet the guarantee conditions and request a refund within 7 days of the
+        final session, I’ll refund 100% of your tuition to your original payment method.
+      </p>
+    </section>
+  
   <footer>
     <p>© <span id="year"></span> Better Ways of Working · 
       <a href="https://bwow.substack.com" target="_blank">Substack</a> · 
