--- a/career-accelerator.html
+++ b/career-accelerator.html
@@ -131,7 +131,7 @@
       <ol>
         <li>
           Go to the application Google Form and select
-          <strong>“This enrollment is a gift for someone else.”</strong>
+          <strong>“It's a gift for someone else.”</strong>
         </li>
         <li>Provide the recipient’s name and email address.</li>
         <li>
