--- a/career-accelerator.html
+++ b/career-accelerator.html
@@ -104,16 +104,16 @@
     <section class="section section-highlight">
       <h2>Money-Back Guarantee</h2>
       <p>
-        I stand behind the Better Career Cohort. If you complete the program and
+        We stand behind the Better Career Cohort. If you complete the program and
         don’t feel more confident, clearer, and better prepared to land your next
-        opportunity, I’ll refund your tuition.
+        opportunity, we’ll refund your tuition.
       </p>
       <h3>How the guarantee works</h3>
       <ul>
         <li>You attend all live sessions (or watch the recordings if you have a conflict).</li>
         <li>You complete the weekly templates/assignments in good faith.</li>
         <li>
-          If you still don’t feel the cohort was worth the investment, email me within
+          If you still don’t feel the cohort was worth the investment, email us within
           7 days of the final session.
         </li>
         <li>You’ll receive a 100% refund—no hassle.</li>
