--- a/events.html
+++ b/events.html
@@ -43,6 +43,7 @@
       <a href="career-accelerator.html">The Better Career Cohort</a>
       <a href="registered-scrum-master.html">Registered Scrum Master</a>
       <a href="programs.html" class="view-all">View all programs →</a>
+      <a href="about.html" class="nav-link">About</a>
     </div>
   </div>
 
