--- a/programs.html
+++ b/programs.html
@@ -24,6 +24,8 @@
       </div>
     </div>
 
+    <a href="about.html" class="nav-link">About</a>
+    
     <a href="events.html" class="nav-link">Events</a>
 
     <div class="nav-dropdown">
