--- a/index.html
+++ b/index.html
@@ -18,14 +18,8 @@
 <nav class="main-nav">
   <a href="index.html" class="nav-logo">Home</a>
 
-  <div class="nav-dropdown">
-    <button class="nav-link">Programs ▾</button>
-    <div class="dropdown-menu">
-      <a href="career-accelerator.html">The Better Career Cohort</a>
-      <a href="registered-scrum-master.html">Registered Scrum Master</a>
-      <a href="programs.html" class="view-all">View all programs →</a>
-    </div>
-  </div>
+<a href="learn.html" class="nav-link">Learn</a>
+<a href="grow.html" class="nav-link">Grow</a>
 
   <a href="about.html" class="nav-link">About</a>
   
