--- a/grow.html
+++ b/grow.html
@@ -10,9 +10,30 @@
 
 <body>
 
-<header class="site-header">
-  <!-- reuse your existing header markup here -->
-</header>
+<header>
+    <a class="logo" href="index.html">
+      <img src="logo-bwow.png" alt="Better Ways of Working logo" />
+    </a>
+<nav class="main-nav">
+  <a href="index.html" class="nav-logo">Home</a>
+  <a href="learn.html" class="nav-link">Learn</a>
+  <a href="grow.html" class="nav-link">Grow</a>
+  <a href="about.html" class="nav-link">About</a>
+  <a href="events.html" class="nav-link">Events</a>
+
+  <div class="nav-dropdown">
+    <button class="nav-link">Resources ▾</button>
+    <div class="dropdown-menu">
+      <a href="https://bwow.substack.com" target="_blank">Newsletter</a>
+      <a href="resources.html#youtube">YouTube</a>
+      <a href="resources.html#podcast">Podcast</a>
+      <a href="resources.html#guides">Guides & Downloads</a>
+      <a href="resources.html" class="view-all">All resources →</a>
+    </div>
+  </div>
+</nav>
+  </header>
+
 
 <section class="hero">
   <div class="container">
