--- a/about.html
+++ b/about.html
@@ -80,40 +80,28 @@
 </head>
 <body>
 <header>
-  <a class="logo" href="index.html">
-    <img src="logo-bwow.png" alt="Better Ways of Working logo" />
-  </a>
-  <nav class="main-nav">
-    <a href="index.html" class="nav-logo">Home</a>
+    <a class="logo" href="index.html">
+      <img src="logo-bwow.png" alt="Better Ways of Working logo" />
+    </a>
+<nav class="main-nav">
+  <a href="index.html" class="nav-logo">Home</a>
+  <a href="learn.html" class="nav-link">Learn</a>
+  <a href="grow.html" class="nav-link">Grow</a>
+  <a href="about.html" class="nav-link">About</a>
+  <a href="events.html" class="nav-link">Events</a>
 
-    <div class="nav-dropdown">
-      <button class="nav-link">Programs ▾</button>
-      <div class="dropdown-menu">
-        <a href="career-accelerator.html">The Better Career Cohort</a>
-        <a href="registered-scrum-master.html">Registered Scrum Master</a>
-        <!-- Future programs -->
-        <!-- <a href="better-teams.html">Better Teams</a> -->
-        <!-- <a href="leadership-cohort.html">Leadership Cohort</a> -->
-        <a href="programs.html" class="view-all">View all programs →</a>
-      </div>
+  <div class="nav-dropdown">
+    <button class="nav-link">Resources ▾</button>
+    <div class="dropdown-menu">
+      <a href="https://bwow.substack.com" target="_blank">Newsletter</a>
+      <a href="resources.html#youtube">YouTube</a>
+      <a href="resources.html#podcast">Podcast</a>
+      <a href="resources.html#guides">Guides & Downloads</a>
+      <a href="resources.html" class="view-all">All resources →</a>
     </div>
-
-    <a href="about.html" class="nav-link">About</a>
-
-    <a href="events.html" class="nav-link">Events</a>
-
-    <div class="nav-dropdown">
-      <button class="nav-link">Resources ▾</button>
-      <div class="dropdown-menu">
-        <a href="https://bwow.substack.com" target="_blank">Newsletter</a>
-        <a href="resources.html#youtube">YouTube</a>
-        <a href="resources.html#podcast">Podcast</a>
-        <a href="resources.html#guides">Guides & Downloads</a>
-        <a href="resources.html" class="view-all">All resources →</a>
-      </div>
-    </div>
-  </nav>
-</header>
+  </div>
+</nav>
+  </header>
 
 <main>
   <section class="about-wrapper">
