--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
         Better Ways of Working helps leaders and teams align, collaborate, and deliver results —
         without adding process or bureaucracy.
       </p>
-      <a href="programs.html" class="btn-primary">Explore Learning &amp; Growth</a>
+       <div class="cta-group">
+        <a href="learn.html" class="btn-primary">Learn a Skill</a>
+        <a href="grow.html" class="btn-secondary">Grow Your Career</a>
+      </div>
+
     </div>
   </section>
 
