--- a/index.html
+++ b/index.html
@@ -121,7 +121,10 @@
     <div class="container">
       <h2>Better outcomes don’t require more effort.</h2>
       <p>They require better ways of working.</p>
-      <a href="programs.html" class="btn-primary">Explore Learning &amp; Growth</a>
+        <div class="cta-group">
+          <a href="learn.html" class="btn-primary">Learn a Skill</a>
+          <a href="grow.html" class="btn-secondary">Grow Your Career</a>
+      </div>
     </div>
   </section>
 
