--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@
         Better Ways of Working helps leaders and teams align, collaborate, and deliver results —
         without adding process or bureaucracy.
       </p>
-       <div class="cta-group">
-        <a href="learn.html" class="btn-primary">Learn a Skill</a>
-        <a href="grow.html" class="btn-secondary">Grow Your Career</a>
-      </div>
-
+        <div class="cta-group">
+          <a href="learn.html" class="cta">Learn a Skill</a>
+          <a href="grow.html" class="cta">Grow Your Career</a>
+        </div>
     </div>
   </section>
 
@@ -122,9 +121,9 @@
       <h2>Better outcomes don’t require more effort.</h2>
       <p>They require better ways of working.</p>
         <div class="cta-group">
-          <a href="learn.html" class="btn-primary">Learn a Skill</a>
-          <a href="grow.html" class="btn-secondary">Grow Your Career</a>
-      </div>
+          <a href="learn.html" class="cta">Learn a Skill</a>
+          <a href="grow.html" class="cta">Grow Your Career</a>
+        </div>
     </div>
   </section>
 
