--- a/index.html
+++ b/index.html
@@ -50,6 +50,41 @@
     </div>
   </section>
 
+  <section class="card-section">
+  <div class="container card-grid">
+
+    <div class="card">
+      <h3>Learn</h3>
+      <p>
+        Build practical skills in leadership, collaboration,
+        and delivery for real-world organizations.
+      </p>
+      <a href="learn.html" class="cta">Learn a Skill</a>
+    </div>
+
+    <div class="card">
+      <h3>Grow</h3>
+      <p>
+        Advance your career, visibility, and opportunities
+        through application and community.
+      </p>
+      <a href="grow.html" class="cta">Grow Your Career</a>
+    </div>
+
+    <div class="card">
+      <h3>Insights</h3>
+      <p>
+        Short, practical insights on better ways of working,
+        shared across social platforms.
+      </p>
+      <a href="https://www.linkedin.com" target="_blank" class="cta">
+        Follow the Work
+      </a>
+    </div>
+
+  </div>
+</section>
+
   <!-- Problem -->
   <section class="problem">
     <div class="container">
