--- a/resources.html
+++ b/resources.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Resources | Better Ways of Working</title>
   <link rel="stylesheet" href="./styles.css" />
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+  integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4k2V9g9zT1+qkK5j7K2y6Q=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"/>
 </head>
 <body>
 
@@ -47,6 +53,16 @@
     <h1>Resources</h1>
     <p>Explore tools, videos, and content to help you find better ways of working.</p>
   </header>
+
+  <section class="hero">
+    <div class="container">
+      <h1>Insights</h1>
+      <p>
+        Practical ideas, conversations, and tools for leaders and teams
+        looking for better ways of working.
+      </p>
+    </div>
+  </section>
 
   <section id="newsletter">
     <h2>Newsletter</h2>
