--- a/resources.html
+++ b/resources.html
@@ -64,23 +64,60 @@
     </div>
   </section>
 
-  <section id="newsletter">
-    <h2>Newsletter</h2>
-    <p>Weekly insights on collaboration, leadership, and Agile — straight to your inbox.</p>
-    <p><a href="https://bwow.substack.com" target="_blank">Subscribe on Substack →</a></p>
-  </section>
+  <section class="content insights-grid">
+  <div class="container">
 
-  <section id="youtube">
-    <h2>YouTube</h2>
-    <p>Short videos, interviews, and insights about better ways of working.</p>
-    <p><a href="https://www.youtube.com/@betterwaysofworking" target="_blank">Visit YouTube →</a></p>
-  </section>
+    <!-- Written -->
+    <div class="insight-block">
+      <i class="fa-solid fa-envelope-open-text"></i>
+      <h3>Written</h3>
+      <p>Short, practical thinking delivered regularly.</p>
+      <a href="https://bwow.substack.com" target="_blank" class="cta">
+        Read the Newsletter
+      </a>
+    </div>
 
-  <section id="podcast">
-    <h2>Podcast</h2>
-    <p>Conversations with leaders and practitioners shaping the future of work.</p>
-    <p><em>Coming soon</em></p>
-  </section>
+    <!-- Video -->
+    <div class="insight-block">
+      <i class="fa-brands fa-youtube"></i>
+      <h3>Video</h3>
+      <p>Interviews, explainers, and visual walkthroughs.</p>
+      <a
+        href="https://www.youtube.com/@betterwaysofworking"
+        target="_blank"
+        class="cta"
+      >
+        Watch on YouTube
+      </a>
+    </div>
+
+    <!-- Audio -->
+    <div class="insight-block">
+      <i class="fa-solid fa-microphone"></i>
+      <h3>Audio</h3>
+      <p>Conversations with practitioners and leaders.</p>
+      <a
+        href="https://api.substack.com/feed/podcast/3279434.rss"
+        target="_blank"
+        class="cta"
+      >
+        Listen to the Podcast
+      </a>
+    </div>
+    
+    <!-- Tools 
+    <div class="insight-block">
+      <i class="fa-solid fa-file-arrow-down"></i>
+      <h3>Guides & Tools</h3>
+      <p>Templates, references, and practical downloads.</p>
+      <a href="resources.html#guides" class="cta">
+        View Guides
+      </a>
+    </div>-->
+
+  </div>
+</section>
+
 
   <section id="guides">
     <h2>Guides & Downloads</h2>
