--- a/resources.html
+++ b/resources.html
@@ -64,11 +64,10 @@
     </div>
   </section>
 
-  <section class="content insights-grid">
-  <div class="container">
+<section class="content insights-section">
+  <div class="container insights-grid">
 
-    <!-- Written -->
-    <div class="insight-block">
+    <div class="insight-card">
       <i class="fa-solid fa-envelope-open-text"></i>
       <h3>Written</h3>
       <p>Short, practical thinking delivered regularly.</p>
@@ -77,8 +76,7 @@
       </a>
     </div>
 
-    <!-- Video -->
-    <div class="insight-block">
+    <div class="insight-card">
       <i class="fa-brands fa-youtube"></i>
       <h3>Video</h3>
       <p>Interviews, explainers, and visual walkthroughs.</p>
@@ -91,8 +89,7 @@
       </a>
     </div>
 
-    <!-- Audio -->
-    <div class="insight-block">
+    <div class="insight-card">
       <i class="fa-solid fa-microphone"></i>
       <h3>Audio</h3>
       <p>Conversations with practitioners and leaders.</p>
@@ -104,21 +101,12 @@
         Listen to the Podcast
       </a>
     </div>
-    
-    <!-- Tools 
-    <div class="insight-block">
-      <i class="fa-solid fa-file-arrow-down"></i>
-      <h3>Guides & Tools</h3>
-      <p>Templates, references, and practical downloads.</p>
-      <a href="resources.html#guides" class="cta">
-        View Guides
-      </a>
-    </div>-->
 
   </div>
 </section>
 
 
+<!--
   <section id="guides">
     <h2>Guides & Downloads</h2>
     <p>Free tools and PDFs to support your journey.</p>
@@ -126,7 +114,7 @@
       <li><a href="path-to-guide.pdf" target="_blank">Guide Example</a></li>
     </ul>
   </section>
-
+-->
 </main>
 
 </body>
