--- a/resources.html
+++ b/resources.html
@@ -83,6 +83,11 @@
   </section>
 -->
 </main>
-
+  <!-- Footer -->
+  <footer class="site-footer">
+    <div class="container">
+      <p>&copy; Better Ways of Working</p>
+    </div>
+  </footer>
 </body>
 </html>
