--- a/resources.html
+++ b/resources.html
@@ -14,10 +14,20 @@
 </head>
 <body>
 
+  <header>
+    <a class="logo" href="index.html">
+      <img src="logo-bwow.png" alt="Better Ways of Working logo" />
+    </a>
+
+    <nav class="main-nav">
+      <!-- nav links -->
+    </nav>
+  </header>
+  
 <main class="page">
 
   <header class="page-header">
-    <h1>Resources</h1>
+    <h1>Insights</h1>
     <p>Explore tools, videos, and content to help you find better ways of working.</p>
   </header>
 
