--- a/resources.html
+++ b/resources.html
@@ -14,14 +14,18 @@
 </head>
 <body>
 
-  <header>
+<header>
     <a class="logo" href="index.html">
       <img src="logo-bwow.png" alt="Better Ways of Working logo" />
     </a>
-
-    <nav class="main-nav">
-      <!-- nav links -->
-    </nav>
+      <nav class="main-nav">
+        <a href="index.html" class="nav-logo">Home</a>
+        <a href="learn.html" class="nav-link">Learn</a>
+        <a href="grow.html" class="nav-link">Grow</a>
+        <a href="about.html" class="nav-link">About</a>
+        <a href="events.html" class="nav-link">Events</a>
+        <a href="resources.html" class="nav-link">Insights</a>
+      </nav>
   </header>
   
 <main class="page">
