--- a/index.html
+++ b/index.html
@@ -21,17 +21,8 @@
   <a href="grow.html" class="nav-link">Grow</a>
   <a href="about.html" class="nav-link">About</a>
   <a href="events.html" class="nav-link">Events</a>
-
-  <div class="nav-dropdown">
-    <button class="nav-link">Resources ▾</button>
-    <div class="dropdown-menu">
-      <a href="https://bwow.substack.com" target="_blank">Newsletter</a>
-      <a href="resources.html#youtube">YouTube</a>
-      <a href="resources.html#podcast">Podcast</a>
-      <a href="resources.html#guides">Guides & Downloads</a>
-      <a href="resources.html" class="view-all">All resources →</a>
-    </div>
-  </div>
+  <a href="resources.html" class="nav-link">Insights</a>
+  
 </nav>
   </header>
 
