--- a/resources.html
+++ b/resources.html
@@ -76,6 +76,22 @@
       </a>
     </div>
 
+  <div class="insight-card">
+    <i class="fa-brands fa-linkedin"></i>
+    <h3>LinkedIn</h3>
+    <p>
+      Short insights, visual explainers, and practical thinking
+      shared in real time.
+    </p>
+    <a
+      href="https://www.linkedin.com/company/better-ways-of-working/"
+      target="_blank"
+      class="cta"
+    >
+      Follow on LinkedIn
+    </a>
+</div>
+
   </div>
 </section>
 
