--- a/learn.html
+++ b/learn.html
@@ -151,9 +151,14 @@
             If leadership, facilitation, or visual collaboration is your priority, join the waitlist and tell us what you want next.
           </p>
           <!-- Replace this link with your Podia/email capture form when ready -->
-          <a class="cta" href="mailto:hello@betterwaysofworking.com?subject=Learn%20Waitlist%20Interest&body=Hi%20Dave%2C%0A%0AI%27m%20interested%20in%20BWOW%20Learn.%20The%20learning%20area%20I%20want%20first%20is%3A%20%5Bfill%20in%5D%0A%0AThanks!">
-            Email your priority
-          </a>
+            <a
+              class="cta"
+              href="https://docs.google.com/forms/d/e/1FAIpQLSdeIbdBYeQ_VMWv0D5mcxzEJ36OcavuY3BAbFa8mMplPR-Wuw/viewform?usp=publish-editor"
+              target="_blank"
+            >
+              Tell us what you want to learn
+            </a>
+
         </div>
       </div>
 
