--- a/learn.html
+++ b/learn.html
@@ -24,7 +24,7 @@
 </nav>
   </header>
 
-
+ <main class="page">
     <section class="hero">
       <div class="container">
         <h1>Learn the skills that make work actually work</h1>
@@ -172,6 +172,6 @@
     <p>&copy; Better Ways of Working</p>
   </div>
 </footer>
-
+</main>
 </body>
 </html>
