--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           Short, practical insights on better ways of working,
           shared across social platforms.
         </p>
-        <a href="https://www.linkedin.com" target="_blank" class="cta">
+        <a href="resources.html" class="cta">
           Follow the Work
         </a>
       </div>
