--- a/resources.html
+++ b/resources.html
@@ -68,7 +68,7 @@
       <h3>Audio</h3>
       <p>Conversations with practitioners and leaders.</p>
       <a
-        href="https://api.substack.com/feed/podcast/3279434.rss"
+        href="https://pod.link/aHR0cHM6Ly9hcGkuc3Vic3RhY2suY29tL2ZlZWQvcG9kY2FzdC8zMjc5NDM0LnJzcw"
         target="_blank"
         class="cta"
       >
