--- a/index.html
+++ b/index.html
@@ -1,150 +1,88 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Better Ways of Working</title>
-  <meta name="description" content="Better Ways of Working helps leaders and teams create clarity, collaboration, and momentum—so they deliver better outcomes without burnout or bureaucracy." />
-  <link rel="stylesheet" href="styles.css" />
-</head>
-
 <body>
 
-  <!-- Header / Navigation -->
-<header>
+  <header>
     <a class="logo" href="index.html">
       <img src="logo-bwow.png" alt="Better Ways of Working logo" />
     </a>
-<nav class="main-nav">
-  <a href="index.html" class="nav-logo">Home</a>
-  <a href="learn.html" class="nav-link">Learn</a>
-  <a href="grow.html" class="nav-link">Grow</a>
-  <a href="about.html" class="nav-link">About</a>
-  <a href="events.html" class="nav-link">Events</a>
-  <a href="resources.html" class="nav-link">Insights</a>
-  
-</nav>
+    <nav class="main-nav">
+      <a href="index.html" class="nav-logo">Home</a>
+      <a href="about.html" class="nav-link">About</a>
+      <a href="events.html" class="nav-link">Events</a>
+      <a href="resources.html" class="nav-link">Insights</a>
+      <a href="https://courses.betterwaysofworking.com" class="cta-nav">View Courses</a>
+    </nav>
   </header>
 
-  <!-- Hero / Soundbite -->
   <section class="hero">
     <div class="container hero-content">
-      <h1>Busy teams. Slow outcomes. Frustrated leaders.</h1>
+      <h1>Stop the Burnout. Start Delivering Outcomes.</h1>
       <p class="hero-subtitle">
-        Better Ways of Working helps leaders and teams align, collaborate, and deliver results —
-        without adding process or bureaucracy.
+        Most teams are busy, but few are effective. We help you cut through the bureaucracy to find a better way of working.
       </p>
+      <a href="https://courses.betterwaysofworking.com" class="cta-main">Explore the Courses</a>
+    </div>
+  </section>
+
+  <section class="stakes-section">
+    <div class="container">
+      <h2>Is your team stuck in "Accidental Complexity"?</h2>
+      <p>Meetings increase while decisions stall. Talented people disengage. "Agile" feels like more process instead of progress. It doesn't have to be this way.</p>
     </div>
   </section>
 
   <section class="card-section">
-    <div class="container card-grid">
-  
+    <div class="container card-grid-centered">
+
       <div class="card">
-        <h3>Learn</h3>
-        <p>
-          Build practical skills in leadership, collaboration,
-          and delivery for real-world organizations.
-        </p>
-        <a href="learn.html" class="cta">Learn a Skill</a>
+        <div class="card-content">
+          <h3>The BWOW Courses</h3>
+          <p>Master the fundamentals of shared clarity, intentional collaboration, and momentum with our practitioner-led training.</p>
+        </div>
+        <a href="https://courses.betterwaysofworking.com" class="cta-button">Start Learning Now</a>
       </div>
-  
+
       <div class="card">
-        <h3>Grow</h3>
-        <p>
-          Advance your career, visibility, and opportunities
-          through application and community.
-        </p>
-        <a href="grow.html" class="cta">Grow Your Career</a>
+        <div class="card-content">
+          <h3>Free Insights</h3>
+          <p>Short, practical tactics on leadership and delivery shared across our platforms.</p>
+        </div>
+        <a href="resources.html" class="cta-button">Read the Blog</a>
       </div>
-  
-      <div class="card">
-        <h3>Insights</h3>
-        <p>
-          Short, practical insights on better ways of working,
-          shared across social platforms.
-        </p>
-        <a href="resources.html" class="cta">
-          Follow the Work
-        </a>
-      </div>
+
     </div>
   </section>
 
-  <!-- Problem -->
-  <section class="problem">
+  <section class="plan-steps">
     <div class="container">
-      <h2>The real problem isn’t effort — it’s alignment</h2>
-      <ul class="problem-list">
-        <li>Teams work hard but move slowly</li>
-        <li>Meetings increase while decisions stall</li>
-        <li>“Agile” becomes process instead of progress</li>
-        <li>Talented people disengage or burn out</li>
-      </ul>
-    </div>
-  </section>
-
-  <!-- Solution -->
-  <section class="solution">
-    <div class="container">
-      <h2>A better way of working</h2>
-      <p>
-        BWOW focuses on the fundamentals most organizations skip:
-        shared clarity, effective collaboration, and leadership habits
-        that sustain momentum in the real world.
-      </p>
-
+      <h2>Your path to a better way of working</h2>
       <div class="solution-steps">
         <div class="step">
-          <h3>1. Create clarity</h3>
-          <p>Align people around goals, priorities, and constraints.</p>
+          <div class="step-number">1</div>
+          <h3>Identify Friction</h3>
+          <p>Pinpoint where bureaucracy is slowing your team down.</p>
         </div>
         <div class="step">
-          <h3>2. Design collaboration</h3>
-          <p>Replace accidental meetings with intentional collaboration.</p>
+          <div class="step-number">2</div>
+          <h3>Implement Habits</h3>
+          <p>Apply simple, repeatable habits for clarity and alignment.</p>
         </div>
         <div class="step">
-          <h3>3. Build momentum</h3>
-          <p>Develop leadership habits that keep teams moving forward.</p>
+          <div class="step-number">3</div>
+          <h3>Scale Outcomes</h3>
+          <p>Watch your team deliver results without the burnout.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Who It’s For -->
-  <section class="audience">
-    <div class="container">
-      <h2>Who this is for</h2>
-      <ul class="audience-list">
-        <li>Leaders of knowledge workers</li>
-        <li>Teams stuck in “busy but not effective” mode</li>
-        <li>Organizations frustrated by failed transformations</li>
-        <li>Professionals growing or navigating career transitions</li>
-      </ul>
-    </div>
-  </section>
-
-  <!-- Credibility -->
-  <section class="credibility">
-    <div class="container">
-      <h2>Built by practitioners</h2>
-      <p>
-        BWOW is grounded in real-world experience helping teams and leaders
-        operate inside complex, high-stakes organizations —
-        not theoretical frameworks or one-size-fits-all playbooks.
-      </p>
-    </div>
-  </section>
-
-  <!-- Final CTA -->
   <section class="final-cta">
     <div class="container">
-      <h2>Better outcomes don’t require more effort.</h2>
-      <p>They require better ways of working.</p>
+      <h2>Ready to transform how your team works?</h2>
+      <p>Join the leaders who are delivering more by doing less of the wrong things.</p>
+      <a href="https://courses.betterwaysofworking.com" class="cta-large">Get Started with Courses</a>
     </div>
   </section>
 
-  <!-- Footer -->
   <footer class="site-footer">
     <div class="container">
       <p>&copy; Better Ways of Working</p>
@@ -152,4 +90,3 @@
   </footer>
 
 </body>
-</html>
