--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Better Ways of Working</title>
+  <meta name="description" content="Better Ways of Working helps leaders and teams create clarity, collaboration, and momentum—so they deliver better outcomes without burnout or bureaucracy." />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
 <body>
 
   <header>
@@ -7,6 +17,7 @@
     <nav class="main-nav">
       <a href="index.html" class="nav-logo">Home</a>
       <a href="about.html" class="nav-link">About</a>
+      <a href="events.html" class="nav-link">Events</a>
       <a href="resources.html" class="nav-link">Insights</a>
       <a href="https://courses.betterwaysofworking.com" class="cta-nav">View Courses</a>
     </nav>
@@ -89,3 +100,4 @@
   </footer>
 
 </body>
+</html>
