--- a/resources.html
+++ b/resources.html
@@ -18,10 +18,10 @@
     </a>
       <nav class="main-nav">
         <a href="index.html" class="nav-logo">Home</a>
-        <a href="learn.html" class="nav-link">Learn</a>
-        <a href="grow.html" class="nav-link">Grow</a>
+        <!--<a href="learn.html" class="nav-link">Learn</a>
+        <a href="grow.html" class="nav-link">Grow</a>-->
         <a href="about.html" class="nav-link">About</a>
-        <a href="events.html" class="nav-link">Events</a>
+        <!--<a href="events.html" class="nav-link">Events</a>-->
         <a href="resources.html" class="nav-link">Insights</a>
       </nav>
   </header>
