--- a/about.html
+++ b/about.html
@@ -85,11 +85,12 @@
     </a>
 <nav class="main-nav">
   <a href="index.html" class="nav-logo">Home</a>
-  <a href="learn.html" class="nav-link">Learn</a>
-  <a href="grow.html" class="nav-link">Grow</a>
+  <!--<a href="learn.html" class="nav-link">Learn</a>
+        <a href="grow.html" class="nav-link">Grow</a>-->
   <a href="about.html" class="nav-link">About</a>
-  <a href="events.html" class="nav-link">Events</a>
+        <!--<a href="events.html" class="nav-link">Events</a>-->
   <a href="resources.html" class="nav-link">Insights</a>
+  <a href="https://courses.betterwaysofworking.com" class="cta-nav">View Courses</a>
 </nav>
   </header>
 
