--- a/resources.html
+++ b/resources.html
@@ -23,6 +23,7 @@
         <a href="about.html" class="nav-link">About</a>
         <!--<a href="events.html" class="nav-link">Events</a>-->
         <a href="resources.html" class="nav-link">Insights</a>
+        <a href="https://courses.betterwaysofworking.com" class="cta-nav">Courses</a>
       </nav>
   </header>
   
