--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
   <a href="about.html" class="nav-link">About</a>
         <!--<a href="events.html" class="nav-link">Events</a>-->
   <a href="resources.html" class="nav-link">Insights</a>
-  <a href="https://courses.betterwaysofworking.com" class="cta-nav">View Courses</a>
+  <a href="https://courses.betterwaysofworking.com" class="cta-nav">Courses</a>
 </nav>
   </header>
 
